# cpp_genetic

./: CMakeLists.txt  README.md
include/: Genetic.hpp  Genetic_Trainer.hpp
src/: CMakeLists.txt  Genetic.cpp  Genetic_Trainer.cpp
test/: CMakeLists.txt  find_ones_multi.cpp  find_ones_sing.cpp  genetic_test.cpp
